index.less
@background: #2b2b2b;
@builtin: #da4939;
@comment: #bc9458;
@constant-decl: #da4939;
@deleted-bg: #600;
@diff-bg: #2f33ab;
@foreground: #e6e1dc;
@function: #ffc66d;
@inserted-bg: #144212;
@invalid-bg: #900;
@invisible: #404040;
@keyword: #cc7833;
@literal: #a5c261;
@literal-escaped: #519f50;
@punctuation: #b0c4de;
@selection-bg: #5a647e;
@symbol: #6d9cbe;
@tag: #e8bf6a;
@type: #6e9cbe;
@variable: #d0d0ff;
@white: #fff;

.editor, .editor .gutter, .zen .panes .pane {
  background-color: @background;
  color: @foreground;
}

.editor.is-focused .cursor {
  border-color: @white;
}

.editor.is-focused .selection .region {
  background-color: @selection-bg;
  opacity: 0.88;
}

.editor.is-focused .line-number.cursor-line-no-selection, .editor.is-focused .line.cursor-line {
  background-color: lighten(@background, 8%);
}

.comment {
  font-style: italic;
  color: @comment;
}

.keyword, .storage {
  color: @keyword;
}

.entity.name.function, .keyword.other.name-of-parameter.objc {
  color: @function;
}

.entity.name {
  color: @white;
}

.constant.numeric {
  color: @literal;
}

.variable {
  color: @variable;
}

.variable.language, .variable.other {
  color: @variable;
}

.constant {
  color: @symbol;
}

.variable.other.constant {
  color: @constant-decl;
}

.constant.language {
  color: @type;
}

.string {
  color: @literal;
}

.support.function {
  color: @builtin;
}

.support.type {
  color: @type;
}

.support.constant {
  color: @literal;
}

.punctuation.section.embedded, .punctuation.section.embedded .source.ruby {
  color: @punctuation;
}

.meta.tag, .declaration.tag, .entity.name.tag, .entity.other.attribute-name {
  color: @tag;
}

.invalid {
  background-color: @invalid-bg;
  color: contrast(@invalid-bg);
}

.constant.character.escaped, .constant.character.escape, .string .source, .string .source.ruby {
  color: @literal-escaped;
}

.markup.inserted {
  color: contrast(@inserted-bg, #000, @foreground);
  background-color: @inserted-bg;
}

.markup.deleted {
  color: contrast(@deleted-bg, #000, @foreground);
  background-color: @deleted-bg;
}

.markup.heading {
  color: @tag;
}

.markup.raw {
  color: @literal;
}

.markup.underline.link.gfm {
  color: @variable;
}

.link {
  color: @literal;
}

.link .entity {
  color: @symbol;
}

.meta.diff.header, .meta.separator.diff, .meta.diff.index, .meta.diff.range {
  background-color: @diff-bg;
}

.invisible-character {
  color: @invisible;
}

